--- a/client/src/app/components/profile-picture-upload/profile-picture-upload.component.html
+++ b/client/src/app/components/profile-picture-upload/profile-picture-upload.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col md:flex-row items-start md:items-center gap-6">
+<div class="pt-2 flex flex-col md:flex-row items-start md:items-center gap-8">
     <!-- Profile Picture Preview -->
     <div class="flex-shrink-0">
         <div class="relative w-32 h-32">
@@ -27,8 +27,8 @@
     </div>
 
     <!-- Upload Actions -->
-    <div class="flex-1 space-y-3">
-        <div class="flex flex-wrap gap-3">
+    <div class="flex-1 space-y-4">
+        <div class="flex flex-wrap gap-2">
             <!-- Upload Button -->
             <app-file-input
                 [label]="profilePictureUrl && !profilePictureUrl.includes('default') ? 'Change Photo' : 'Upload Photo'"
