--- a/client/src/app/components/form/weekly-availability/weekly-availability.component.html
+++ b/client/src/app/components/form/weekly-availability/weekly-availability.component.html
@@ -21,26 +21,28 @@
             </div>
 
             <!-- Time ranges (only show if day is enabled) -->
-            <div *ngIf="availability[day].enabled" class="pl-8 space-y-3">
+            <div *ngIf="availability[day].enabled" class="pl-4 sm:pl-8 space-y-3">
 
                 <div *ngFor="let range of availability[day].timeRanges; let i = index"
-                    class="flex flex-col sm:flex-row items-start sm:items-center gap-3">
+                    class="flex flex-col sm:flex-row items-stretch sm:items-center gap-2 sm:gap-3">
 
                     <!-- From Time -->
-                    <div class="flex items-center gap-2">
-                        <label class="text-sm text-gray-600 dark:text-gray-400 min-w-[40px]">From:</label>
+                    <div class="flex items-center gap-2 flex-1">
+                        <label
+                            class="text-xs sm:text-sm text-gray-600 dark:text-gray-400 w-[40px] sm:w-[45px]">From:</label>
                         <input
-                            class="px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-800 dark:text-gray-200 cursor-pointer"
+                            class="w-full px-2 sm:px-3 py-1.5 sm:py-2 text-xs sm:text-sm border border-gray-300 dark:border-gray-600 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-800 dark:text-gray-200 cursor-pointer"
                             [ngxTimepicker]="startPicker" [(ngModel)]="availability[day].timeRanges[i].start"
                             (ngModelChange)="onTimeChange()" placeholder="Select time" readonly />
                         <ngx-material-timepicker #startPicker [format]="12"></ngx-material-timepicker>
                     </div>
 
                     <!-- To Time -->
-                    <div class="flex items-center gap-2">
-                        <label class="text-sm text-gray-600 dark:text-gray-400 min-w-[25px]">To:</label>
+                    <div class="flex items-center gap-2 flex-1">
+                        <label
+                            class="text-xs sm:text-sm text-gray-600 dark:text-gray-400 w-[40px] sm:w-[45px]">To:</label>
                         <input
-                            class="px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-800 dark:text-gray-200 cursor-pointer"
+                            class="w-full px-2 sm:px-3 py-1.5 sm:py-2 text-xs sm:text-sm border border-gray-300 dark:border-gray-600 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none dark:bg-gray-800 dark:text-gray-200 cursor-pointer"
                             [ngxTimepicker]="endPicker" [(ngModel)]="availability[day].timeRanges[i].end"
                             (ngModelChange)="onTimeChange()" placeholder="Select time" readonly />
                         <ngx-material-timepicker #endPicker [format]="12"></ngx-material-timepicker>
@@ -49,9 +51,10 @@
                     <!-- Remove button with trash icon (only if more than 1 range) -->
                     <button *ngIf="availability[day].timeRanges.length > 1" type="button"
                         (click)="removeTimeRange(day, i)"
-                        class="inline-flex items-center justify-center w-10 h-10 bg-red-600 text-white rounded-md hover:bg-red-700 shadow-sm"
+                        class="inline-flex items-center justify-center w-9 h-9 sm:w-10 sm:h-10 bg-red-600 text-white rounded-md hover:bg-red-700 shadow-sm flex-shrink-0"
                         title="Remove time range">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5" viewBox="0 0 20 20"
+                            fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                                 clip-rule="evenodd" />
@@ -61,9 +64,10 @@
 
                 <!-- Add button with + icon (green) -->
                 <button type="button" (click)="addTimeRange(day)"
-                    class="inline-flex items-center justify-center w-10 h-10 bg-green-600 text-white rounded-md hover:bg-green-700 shadow-sm"
+                    class="inline-flex items-center justify-center w-9 h-9 sm:w-10 sm:h-10 bg-green-600 text-white rounded-md hover:bg-green-700 shadow-sm"
                     title="Add time range">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 sm:h-6 sm:w-6" viewBox="0 0 20 20"
+                        fill="currentColor">
                         <path fill-rule="evenodd"
                             d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                             clip-rule="evenodd" />
