--- a/client/src/app/pages/guard-setting/guard-setting.component.html
+++ b/client/src/app/pages/guard-setting/guard-setting.component.html
@@ -92,7 +92,8 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="flex flex-col md:col-span-1">
                     <app-base-input label="Contact Name" name="secondaryContactName"
-                        [(ngModel)]="guardFormModel.secondaryContact.name">
+                        [(ngModel)]="guardFormModel.secondaryContact.name" pattern="[a-zA-Z\s]*"
+                        helperText="Letters and spaces only">
                     </app-base-input>
                     <app-error-message [errorMessage]="guardErrors.secondaryContactName || null"></app-error-message>
                 </div>
@@ -148,11 +149,13 @@
                     <div card-header>
                         <h3 class="font-semibold text-gray-800 dark:text-gray-200">
                             {{ doc.documentType ? toTitleCase(doc.documentType) : ('Document ' + (i + 1)) }}
+                            <span *ngIf="i > 0" class="text-sm font-normal text-gray-500 dark:text-gray-400">
+                                (Optional)</span>
                         </h3>
                     </div>
                     <div card-actions>
-                        <app-button label="Remove" type="danger" htmlType="button" size="sm"
-                            (click)="removeIdentificationDocument(i)">
+                        <app-button *ngIf="guardFormModel.identification.documents.length > 1" label="Remove"
+                            type="danger" htmlType="button" size="sm" (click)="removeIdentificationDocument(i)">
                         </app-button>
                     </div>
 
@@ -161,7 +164,7 @@
                         <div class="flex flex-col">
                             <app-select-input label="Document Type" [name]="'docType_' + i"
                                 [(ngModel)]="doc.documentType" [options]="documentTypeOptions"
-                                placeholder="-- Select Document Type --" [required]="true"
+                                placeholder="-- Select Document Type --" [required]="i === 0"
                                 [searchable]="true"></app-select-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['identification_' + doc.id + '_type'] || null"></app-error-message>
@@ -170,7 +173,7 @@
                         <!-- Document Number -->
                         <div class="flex flex-col">
                             <app-base-input [label]="'Document Number'" [name]="'docNumber_' + i"
-                                [(ngModel)]="doc.number" [required]="true"></app-base-input>
+                                [(ngModel)]="doc.number" [required]="i === 0"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['identification_' + doc.id + '_number'] || null"></app-error-message>
                         </div>
@@ -179,7 +182,8 @@
                         <div *ngIf="requiresProvince(doc.documentType)" class="flex flex-col">
                             <app-select-input label="Province" [name]="'province_' + i" [(ngModel)]="doc.province"
                                 [options]="provinceOptions" placeholder="-- Select Province --"
-                                [required]="requiresProvince(doc.documentType)" [searchable]="true"></app-select-input>
+                                [required]="i === 0 && requiresProvince(doc.documentType)"
+                                [searchable]="true"></app-select-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['identification_' + doc.id + '_province'] || null"></app-error-message>
                         </div>
@@ -188,7 +192,7 @@
                         <div *ngIf="requiresExpiry(doc.documentType)" class="flex flex-col">
                             <app-base-input [label]="'Expiry Date'" [name]="'docExpiry_' + i" type="date"
                                 [(ngModel)]="doc.expiryDate"
-                                [required]="requiresExpiry(doc.documentType)"></app-base-input>
+                                [required]="i === 0 && requiresExpiry(doc.documentType)"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['identification_' + doc.id + '_expiry'] || null"></app-error-message>
                         </div>
@@ -233,25 +237,28 @@
                         <h3 class="font-semibold text-gray-800 dark:text-gray-200">
                             {{ license.licenseNumber ? ('License ' + license.licenseNumber) : ('Security License ' + (i
                             + 1)) }}
+                            <span *ngIf="i > 0" class="text-sm font-normal text-gray-500 dark:text-gray-400">
+                                (Optional)</span>
+
                         </h3>
                     </div>
                     <div card-actions>
-                        <app-button label="Remove" type="danger" htmlType="button" size="sm"
-                            (click)="removeSecurityLicense(i)">
+                        <app-button *ngIf="guardFormModel.securityLicenses.length > 1" label="Remove" type="danger"
+                            htmlType="button" size="sm" (click)="removeSecurityLicense(i)">
                         </app-button>
                     </div>
 
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div class="flex flex-col">
                             <app-base-input label="Guard’s Full Legal Name" [name]="'securityLicenseFullName_' + i"
-                                [(ngModel)]="license.fullLegalName" [required]="true"></app-base-input>
+                                [(ngModel)]="license.fullLegalName" [required]="i === 0"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['security_license_' + license.id + '_fullLegalName'] || null"></app-error-message>
                         </div>
 
                         <div class="flex flex-col">
                             <app-base-input label="License Number" [name]="'securityLicenseNumber_' + i"
-                                [(ngModel)]="license.licenseNumber" [required]="true"></app-base-input>
+                                [(ngModel)]="license.licenseNumber" [required]="i === 0"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['security_license_' + license.id + '_licenseNumber'] || null"></app-error-message>
                         </div>
@@ -259,7 +266,7 @@
                         <div class="flex flex-col">
                             <app-select-input label="License Type" [name]="'securityLicenseType_' + i"
                                 [(ngModel)]="license.licenseType" [options]="securityLicenseTypeOptions"
-                                placeholder="-- Select License Type --" [required]="true"
+                                placeholder="-- Select License Type --" [required]="i === 0"
                                 [searchable]="false"></app-select-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['security_license_' + license.id + '_licenseType'] || null"></app-error-message>
@@ -268,31 +275,32 @@
                         <div class="flex flex-col">
                             <app-select-input label="Issuing Province" [name]="'securityLicenseProvince_' + i"
                                 [(ngModel)]="license.issuingProvince" [options]="provinceOptions"
-                                placeholder="-- Select Province --" [required]="true"
+                                placeholder="-- Select Province --" [required]="i === 0"
                                 [searchable]="true"></app-select-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['security_license_' + license.id + '_issuingProvince'] || null"></app-error-message>
                         </div>
 
                         <div class="flex flex-col">
-                            <app-base-input label="Issuing Authority" [name]="'securityLicenseIssuingAuthority_' + i"
-                                [(ngModel)]="license.issuingAuthority" [required]="true"
-                                [placeholder]="getSuggestedIssuingAuthority(license.issuingProvince) || 'e.g., Ministry of the Solicitor General'"
-                                helperText="Will auto-populate based on selected province"></app-base-input>
+                            <app-select-input label="Issuing Province" [name]="'securityLicenseProvince_' + i"
+                                [(ngModel)]="license.issuingProvince"
+                                (ngModelChange)="onSecurityLicenseProvinceChange(license, $event)"
+                                [options]="provinceOptions" placeholder="-- Select Province --" [required]="i === 0"
+                                [searchable]="true"></app-select-input>
                             <app-error-message
-                                [errorMessage]="guardErrors['security_license_' + license.id + '_issuingAuthority'] || null"></app-error-message>
+                                [errorMessage]="guardErrors['security_license_' + license.id + '_issuingProvince'] || null"></app-error-message>
                         </div>
 
                         <div class="flex flex-col">
                             <app-base-input label="Issue Date" [name]="'securityLicenseIssueDate_' + i" type="date"
-                                [(ngModel)]="license.issueDate" [required]="true"></app-base-input>
+                                [(ngModel)]="license.issueDate" [required]="i === 0"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['security_license_' + license.id + '_issueDate'] || null"></app-error-message>
                         </div>
 
                         <div class="flex flex-col">
                             <app-base-input label="Expiry Date" [name]="'securityLicenseExpiryDate_' + i" type="date"
-                                [(ngModel)]="license.expiryDate" [required]="true"></app-base-input>
+                                [(ngModel)]="license.expiryDate" [required]="i === 0"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['security_license_' + license.id + '_expiryDate'] || null"></app-error-message>
                         </div>
@@ -337,11 +345,14 @@
                             ? (record.issuingAuthorityOther || ('Police Clearance ' + (i + 1)))
                             : (record.issuingAuthorityType ? getPoliceAuthorityLabel(record.issuingAuthorityType) :
                             ('Police Clearance ' + (i + 1))) }}
+                            <span *ngIf="i > 0" class="text-sm font-normal text-gray-500 dark:text-gray-400">
+                                (Optional)</span>
+
                         </h3>
                     </div>
                     <div card-actions>
-                        <app-button label="Remove" type="danger" htmlType="button" size="sm"
-                            (click)="removePoliceClearance(i)">
+                        <app-button *ngIf="guardFormModel.policeClearances.length > 1" label="Remove" type="danger"
+                            htmlType="button" size="sm" (click)="removePoliceClearance(i)">
                         </app-button>
                     </div>
 
@@ -349,7 +360,7 @@
                         <div class="flex flex-col">
                             <app-select-input label="Issuing Authority Type" [name]="'policeClearanceAuthority_' + i"
                                 [(ngModel)]="record.issuingAuthorityType" [options]="policeClearanceAuthorityOptions"
-                                placeholder="-- Select Authority Type --" [required]="true"
+                                placeholder="-- Select Authority Type --" [required]="i === 0"
                                 [searchable]="true"></app-select-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['police_clearance_' + record.id + '_issuingAuthorityType'] || null"></app-error-message>
@@ -358,7 +369,7 @@
                         <div class="flex flex-col" *ngIf="record.issuingAuthorityType === 'other'">
                             <app-base-input label="Issuing Authority (Specify)"
                                 [name]="'policeClearanceAuthorityOther_' + i" [(ngModel)]="record.issuingAuthorityOther"
-                                [required]="true"></app-base-input>
+                                [required]="i === 0"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['police_clearance_' + record.id + '_issuingAuthorityOther'] || null"></app-error-message>
                         </div>
@@ -366,7 +377,7 @@
                         <div class="flex flex-col">
                             <app-select-input label="Issuing Province" [name]="'policeClearanceProvince_' + i"
                                 [(ngModel)]="record.issuingProvince" [options]="provinceOptions"
-                                placeholder="-- Select Province --" [required]="true"
+                                placeholder="-- Select Province --" [required]="i === 0"
                                 [searchable]="true"></app-select-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['police_clearance_' + record.id + '_issuingProvince'] || null"></app-error-message>
@@ -379,7 +390,7 @@
 
                         <div class="flex flex-col">
                             <app-base-input label="Issue Date" [name]="'policeClearanceIssueDate_' + i" type="date"
-                                [(ngModel)]="record.issueDate" [required]="true"></app-base-input>
+                                [(ngModel)]="record.issueDate" [required]="i === 0"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['police_clearance_' + record.id + '_issueDate'] || null"></app-error-message>
                         </div>
@@ -393,7 +404,7 @@
                             <app-file-upload label="Clearance Document" [name]="'policeClearanceDocument_' + i"
                                 [(ngModel)]="record.file" (fileChange)="onPoliceClearanceFileSelected(record, $event)"
                                 [existingFileUrl]="record.existingFileUrl" [existingFileName]="record.existingFileName"
-                                helperText="PNG, JPG, PDF up to 10MB" [required]="false"
+                                helperText="PNG, JPG, PDF up to 10MB" [required]="i === 0"
                                 [disabled]="policeClearanceUploadInProgress[record.id || '']"></app-file-upload>
                             <p class="text-xs sm:text-xs text-gray-500 mt-2">Optional, upload now to avoid later holds.
                             </p>
@@ -426,11 +437,12 @@
                         <h3 class="font-semibold text-gray-800 dark:text-gray-200">
                             {{ cert.certificateName ? getTrainingCertificateLabel(cert.certificateName) : ('Training
                             Certificate ' + (i + 1)) }}
+                            <span class="text-sm font-normal text-gray-500 dark:text-gray-400"> (Optional)</span>
                         </h3>
                     </div>
                     <div card-actions>
-                        <app-button label="Remove" type="danger" htmlType="button" size="sm"
-                            (click)="removeTrainingCertificate(i)">
+                        <app-button *ngIf="guardFormModel.trainingCertificates.length > 1" label="Remove" type="danger"
+                            htmlType="button" size="sm" (click)="removeTrainingCertificate(i)">
                         </app-button>
                     </div>
 
@@ -440,7 +452,7 @@
                                 [(ngModel)]="cert.certificateName"
                                 (ngModelChange)="onTrainingCertificateTypeChange(cert)"
                                 [options]="trainingCertificateOptions" placeholder="-- Select Certificate --"
-                                [required]="true" [searchable]="true"></app-select-input>
+                                [searchable]="true"></app-select-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['training_certificate_' + cert.id + '_certificateName'] || null"></app-error-message>
                         </div>
@@ -449,23 +461,22 @@
                             <app-select-input label="Issuing Organization" [name]="'trainingCertificateOrg_' + i"
                                 [(ngModel)]="cert.issuingOrganizationType"
                                 [options]="getTrainingIssuerOptions(cert.certificateName)"
-                                placeholder="-- Select Issuer --" [required]="true"
-                                [searchable]="true"></app-select-input>
+                                placeholder="-- Select Issuer --" [searchable]="true"></app-select-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['training_certificate_' + cert.id + '_issuingOrganizationType'] || null"></app-error-message>
                         </div>
 
                         <div class="flex flex-col" *ngIf="cert.issuingOrganizationType === 'other'">
                             <app-base-input label="Issuing Organization (Specify)"
-                                [name]="'trainingCertificateOrgOther_' + i" [(ngModel)]="cert.issuingOrganizationOther"
-                                [required]="true"></app-base-input>
+                                [name]="'trainingCertificateOrgOther_' + i"
+                                [(ngModel)]="cert.issuingOrganizationOther"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['training_certificate_' + cert.id + '_issuingOrganizationOther'] || null"></app-error-message>
                         </div>
 
                         <div class="flex flex-col">
                             <app-base-input label="Issue Date" [name]="'trainingCertificateIssueDate_' + i" type="date"
-                                [(ngModel)]="cert.issueDate" [required]="true"></app-base-input>
+                                [(ngModel)]="cert.issueDate"></app-base-input>
                             <app-error-message
                                 [errorMessage]="guardErrors['training_certificate_' + cert.id + '_issueDate'] || null"></app-error-message>
                         </div>
