Currency minor changes

--- a/client/src/app/pages/service-provider-setting/service-provider-setting.component.html
+++ b/client/src/app/pages/service-provider-setting/service-provider-setting.component.html
@@ -252,6 +252,7 @@
 
                 <div class="flex flex-col">
                     <app-base-input label="Currency" name="coverageCurrency"
+                        [disabled]="true"
                         [(ngModel)]="providerFormModel.insuranceDetails.currency">
                     </app-base-input>
                 </div>
