Side drawer component projection

--- a/client/src/app/components/avatar/avatar.component.html
+++ b/client/src/app/components/avatar/avatar.component.html
@@ -1,4 +1,4 @@
-<div class="avatar flex items-center">
+<div class="flex items-center">
   <ng-container *ngIf="src; else initials">
     <img [src]="src" alt="Avatar" class="w-10 h-10 rounded-full object-cover border border-gray-200 dark:border-gray-700" />
   </ng-container>
