--- a/client/src/app/components/placeload/placeload.component.html
+++ b/client/src/app/components/placeload/placeload.component.html
@@ -1,5 +1,5 @@
 <div
-  class="relative overflow-hidden bg-gray-200 dark:bg-gray-700"
+  class="relative overflow-hidden bg-gray-200 dark:bg-gray-700 animate-pulse"
   [ngStyle]="{ width: width, height: height }"
   [ngClass]="{
     'rounded': rounded === 'md',
@@ -8,5 +8,5 @@
     'rounded-sm': rounded === 'sm'
   }"
 >
-  <span class="absolute inset-0 block w-full h-full shimmer"></span>
+  <span class="absolute inset-0 block w-full h-full"></span>
 </div>
