Settings page implemented

--- a/client/src/app/components/avatar-menu/avatar-menu.component.html
+++ b/client/src/app/components/avatar-menu/avatar-menu.component.html
@@ -15,10 +15,8 @@
   <div *ngIf="showUserMenu"
     class="absolute right-0 mt-2 w-48 bg-white dark:bg-gray-800 rounded shadow-lg ring-1 ring-black ring-opacity-5 z-50">
     <div class="py-2">
-      <button type="button" (click)="goProfile()"
-        class="block w-full text-left px-4 py-2 text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">Profile</button>
       <button type="button" (click)="goSettings()"
-        class="block w-full text-left px-4 py-2 text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">User Settings</button>
+        class="block w-full text-left px-4 py-2 text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">Settings</button>
       <button type="button" (click)="goDashboard()"
         class="block w-full text-left px-4 py-2 text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">Dashboard</button>
       <button type="button" (click)="logout()"
